[gd_scene load_steps=2 format=3 uid="uid://dnbuk32inicvw"]

[ext_resource type="Script" uid="uid://c3hcm83051rte" path="res://scripts/dev_tools/dev_tools.gd" id="1_x6brq"]

[node name="DevTools" type="CanvasLayer"]
script = ExtResource("1_x6brq")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.223529)
offset_right = 510.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 511.0
offset_bottom = 241.0

[node name="MousePos" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TileInfo" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PlayerInfo" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EntityInfo" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
